Fix for overlapping alert and notif panel

--- a/app/assets/stylesheets/dashboard/notifications.scss
+++ b/app/assets/stylesheets/dashboard/notifications.scss
@@ -3,7 +3,7 @@ $grey: #ccc;
 $info-blue: #03a9f4;
 
 .notifications-panel {
-  margin-top: -30px;
+  top: 70px;
   position: absolute;
   right: 0px;
   background: white;
